# bootstrap

./: bootstrap.py  driver.py  main.py  multi_proc.py  pyproject.toml
src/consumer/: __init__.py  consumer.py
src/producer/: producer.py
src/sample/: __init__.py  bootstrap_sample.py
