[tool.poetry]
name = "bootstrap"
version = "0.0.1"
description = "Package for bootstrap estimation with support for parallelisation"
authors = ["TristanBester <tristanbester@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.1.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
numpy = "^1.22.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
